unpackaged/main/default/objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>Object used to track PO's so distributors can fill out the following forms: US Order Form, EDI Form, Canada_LATAM Form, Changes Form</description>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>