unpackaged/main/default/objects/Purchase_Order__c/fields/Barrel_Number__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Number__c</fullName>
    <label>Barrel Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>