unpackaged/main/default/objects/Purchase_Order__c/fields/Barrel_Number_txt__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Number_txt__c</fullName>
    <label>Barrel Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>