unpackaged/main/default/objects/Purchase_Order__c/fields/Barrel_Order__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Order__c</fullName>
    <label>Barrel Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>