unpackaged/main/default/objects/Purchase_Order__c/fields/Budget_Code__c.field-meta.xml
<CustomField>
    <fullName>Budget_Code__c</fullName>
    <label>Budget Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>