unpackaged/main/default/objects/Purchase_Order__c/fields/Direct_Import__c.field-meta.xml
<CustomField>
    <fullName>Direct_Import__c</fullName>
    <label>Direct Import?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>