unpackaged/main/default/objects/Purchase_Order__c/fields/Inco_Terms_Approved__c.field-meta.xml
<CustomField>
    <fullName>Inco_Terms_Approved__c</fullName>
    <label>Inco Terms Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>