unpackaged/main/default/objects/Purchase_Order__c/fields/PurchaseOrderIssues__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderIssues__c</fullName>
    <label>Purchase Order Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Issue</fullName>
            </value>
            <value>
                <fullName>Overweight</fullName>
            </value>
            <value>
                <fullName>Missing Carrier</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Incoterms</fullName>
            </value>
            <value>
                <fullName>Wrong Plant</fullName>
            </value>
            <value>
                <fullName>Under Weight</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>