unpackaged/main/default/objects/Purchase_Order__c/fields/SAP_No_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SAP_No_Timestamp__c</fullName>
    <label>SAP Number Timestamp</label>
    <type>DateTime</type>
</CustomField>