unpackaged/main/default/objects/Purchase_Order__c/fields/SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Number__c</fullName>
    <label>SAP Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>