unpackaged/main/default/objects/Purchase_Order__c/validationRules/Incoterms_Changed_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>Incoterms_Changed_Requirement</fullName>
    <active>true</active>
    <description>If Incoterms were changed, Reason and Budget Code are required.</description>
    <errorConditionFormula>AND (
 ISPICKVAL( Inco_Terms_Changed__c , "Yes"),
 OR(
 ISBLANK( Reason__c ),
 ISBLANK( Budget_Code__c ),
 ISPICKVAL( Inco_Terms_Approved__c , "") 
)
)</errorConditionFormula>
    <errorMessage>Incoterms Approved, Reason and Budget Code fields are Required because Incoterms were changed.</errorMessage>
</ValidationRule>