unpackaged/main/default/objects/Purchase_Order__c/validationRules/Other_Issue_Required_on_PO_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Issue_Required_on_PO_Issue</fullName>
    <active>true</active>
    <description>If Purchase Order Issue is "Other", this requires "Other Issue" to be populated.</description>
    <errorConditionFormula>AND ( 
INCLUDES(  PurchaseOrderIssues__c , "Other"), 
ISBLANK(  Other_Issue__c  ) 
)</errorConditionFormula>
    <errorDisplayField>Other_Issue__c</errorDisplayField>
    <errorMessage>This field is required.</errorMessage>
</ValidationRule>